--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,7 @@
+# Git
+.git
+.gitignore
+
 # Python
 __pycache__/
 *.py[cod]
@@ -53,3 +57,16 @@ Thumbs.db
 
 # Firebase
 fire-base.json
+
+# Documentation
+docs/
+*.md
+
+# Test coverage
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+coverage.xml
+*.cover 
